lesson5/k8s-log-platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: log-platform
spec:
  mtls:
    mode: STRICT
